force-app/main/default/objects/Case/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <label>Actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A clôturer</fullName>
                <default>true</default>
                <label>Fermée</label>
            </value>
            <value>
                <fullName>En attente retour client</fullName>
            </value>
            <value>
                <fullName>Transfert à la salle</fullName>
            </value>
            <value>
                <fullName>En attente remboursement</fullName>
            </value>
            <value>
                <fullName>Pas de réponse et à clôturer</fullName>
            </value>
            <value>
                <fullName>En attente retour interne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>