force-app/main/default/objects/Case/fields/Adresse__c.field-meta.xml
<CustomField>
    <fullName>Adresse__c</fullName>
    <description>Champ pour la création d&#39;un ticket par la salle</description>
    <label>Adresse</label>
    <length>140</length>
    <type>Text</type>
</CustomField>