force-app/main/default/objects/Case/fields/Adresse_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Livraison__c</fullName>
    <description>Champ alimenté automatiquement pour la création d&#39;un ticket Fidélio</description>
    <label>Adresse_Livraison</label>
    <length>250</length>
    <type>Text</type>
</CustomField>