force-app/main/default/objects/Case/fields/Adresse_Livraison_Complementaire__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Livraison_Complementaire__c</fullName>
    <label>Adresse_Livraison_Complementaire</label>
    <length>250</length>
    <type>Text</type>
</CustomField>