force-app/main/default/objects/Case/fields/AdresseEmail__c.field-meta.xml
<CustomField>
    <fullName>AdresseEmail__c</fullName>
    <description>Champ qui copie la valeur renseigné dans le champ &quot;Email&quot; et &quot;Email complémentaire&quot; sur le compte</description>
    <formula>Contact.Email + BR() +  Account.CliEmailComplementaire__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse Email</label>
    <type>Text</type>
</CustomField>