force-app/main/default/objects/Case/fields/AdressePostale__c.field-meta.xml
<CustomField>
    <fullName>AdressePostale__c</fullName>
    <description>Ce champ copie l&#39;adresse postale renseignée sur le compte</description>
    <formula>Account.AdressePostale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse postale</label>
    <type>Text</type>
</CustomField>