force-app/main/default/objects/Case/fields/AdressePostalePayeur__c.field-meta.xml
<CustomField>
    <fullName>AdressePostalePayeur__c</fullName>
    <description>Champ pour renseigner l&#39;adresse postale du payeur (pr demande de remboursement)</description>
    <label>Adresse postale payeur</label>
    <length>50</length>
    <type>Text</type>
</CustomField>