force-app/main/default/objects/Case/fields/AIDE__c.field-meta.xml
<CustomField>
    <fullName>AIDE__c</fullName>
    <formula>IMAGE(&quot;/resource/1513158742000/Alerte?isdtp=p1&quot;,&quot;.png&quot;,40,40) 
&amp;&quot; &quot;&amp; 
LOWER(&quot;Merci de remplir les montants avec une virgule et pas un point&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>.</label>
    <type>Text</type>
</CustomField>