force-app/main/default/objects/Case/fields/AideReponseClient__c.field-meta.xml
<CustomField>
    <fullName>AideReponseClient__c</fullName>
    <defaultValue>&quot;Veuillez qualifier le ticket&quot;</defaultValue>
    <description>Champ qui sera alimenté automatiquement qu&#39;un statut (Famille, motif, sous motif) est sélectionné</description>
    <label>Aide à la réponse client</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>