force-app/main/default/objects/Case/fields/Attachment_Id_Contrat__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Id_Contrat__c</fullName>
    <label>Attachment Id Contrat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>