force-app/main/default/objects/Case/fields/Attribue__c.field-meta.xml
<CustomField>
    <fullName>Attribue__c</fullName>
    <description>Champ alimenté automatiquement pour la création de tickets Fidélio</description>
    <label>Attribue</label>
    <length>150</length>
    <type>Text</type>
</CustomField>