force-app/main/default/objects/Case/fields/BILENDI__c.field-meta.xml
<CustomField>
    <fullName>BILENDI__c</fullName>
    <label>BILENDI</label>
    <length>25</length>
    <type>Text</type>
</CustomField>