force-app/main/default/objects/Case/fields/Billet__c.field-meta.xml
<CustomField>
    <fullName>Billet__c</fullName>
    <description>Champ pour la création d&#39;un ticket par la salle</description>
    <label>Billet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>En possession de l&#39;abonné</fullName>
            </value>
            <value>
                <fullName>Récupéré par la salle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>