force-app/main/default/objects/Case/fields/BillRunId__c.field-meta.xml
<CustomField>
    <fullName>BillRunId__c</fullName>
    <description>Stocke le numero du BillRun si un bill run est execute en asynchrone lors d un processus: exemple Migration</description>
    <label>BillRunId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>