force-app/main/default/objects/Case/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <description>Champ pour Demande remboursement</description>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borne</fullName>
            </value>
            <value>
                <fullName>Site UGC</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>