force-app/main/default/objects/Case/fields/CaseExtId__c.field-meta.xml
<CustomField>
    <fullName>CaseExtId__c</fullName>
    <externalId>true</externalId>
    <label>CaseExtId</label>
    <type>AutoNumber</type>
</CustomField>