force-app/main/default/objects/Case/fields/Categorie__c.field-meta.xml
<CustomField>
    <fullName>Categorie__c</fullName>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Domaine__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cartes partenaires</fullName>
            </value>
            <value>
                <fullName>UGC 5/7</fullName>
            </value>
            <value>
                <fullName>UGC Blue</fullName>
            </value>
            <value>
                <fullName>UGC SOLO</fullName>
            </value>
            <value>
                <fullName>Echange de points</fullName>
            </value>
            <value>
                <fullName>Fonctionnement Fidélité</fullName>
            </value>
            <value>
                <fullName>Gain de points</fullName>
            </value>
            <value>
                <fullName>Inscription</fullName>
            </value>
            <value>
                <fullName>Solde de points</fullName>
            </value>
            <value>
                <fullName>Annulation Réservation</fullName>
            </value>
            <value>
                <fullName>Autres (à préciser)</fullName>
            </value>
            <value>
                <fullName>Billet(s) non édité(s)</fullName>
            </value>
            <value>
                <fullName>Réservation inexistante</fullName>
            </value>
            <value>
                <fullName>Retrait de réservation</fullName>
            </value>
            <value>
                <fullName>Accueil</fullName>
            </value>
            <value>
                <fullName>Confort, Propreté</fullName>
            </value>
            <value>
                <fullName>Programmation</fullName>
            </value>
            <value>
                <fullName>Projection</fullName>
            </value>
            <value>
                <fullName>Sécurité</fullName>
            </value>
            <value>
                <fullName>Résiliation</fullName>
            </value>
            <value>
                <fullName>Stand UI</fullName>
            </value>
            <value>
                <fullName>Avertissement</fullName>
            </value>
            <value>
                <fullName>Edition avec frais</fullName>
            </value>
            <value>
                <fullName>Edition sans frais</fullName>
            </value>
            <value>
                <fullName>SECRETARIAT</fullName>
            </value>
            <value>
                <fullName>Stand UU</fullName>
            </value>
            <value>
                <fullName>Aanvraag nieuwe kaart met kosten</fullName>
            </value>
            <value>
                <fullName>Aanvraag nieuwe kaart zonder kosten</fullName>
            </value>
            <value>
                <fullName>Opzegging</fullName>
            </value>
            <value>
                <fullName>Waarschuwing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>