force-app/main/default/objects/Case/fields/ChampCache__c.field-meta.xml
<CustomField>
    <fullName>ChampCache__c</fullName>
    <label>ChampCaché</label>
    <length>255</length>
    <type>Text</type>
</CustomField>