force-app/main/default/objects/Case/fields/Civilite_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Civilite_Livraison__c</fullName>
    <description>Champ alimenté automatiquement pour la création d&#39;un ticket Fidélio</description>
    <label>Civilité (livraison)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>