force-app/main/default/objects/Case/fields/CodePostal_Livraison__c.field-meta.xml
<CustomField>
    <fullName>CodePostal_Livraison__c</fullName>
    <description>Champ alimenté automatiquement pour la création d&#39;un ticket Fidélio</description>
    <label>Code postal (livraison)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>