force-app/main/default/objects/Case/fields/CommentaireRefus__c.field-meta.xml
<CustomField>
    <fullName>CommentaireRefus__c</fullName>
    <label>Commentaires du refus</label>
    <type>TextArea</type>
</CustomField>