force-app/main/default/objects/Case/fields/CommentaireRenseignePar__c.field-meta.xml
<CustomField>
    <fullName>CommentaireRenseignePar__c</fullName>
    <label>Commentaires renseignés par</label>
    <type>TextArea</type>
</CustomField>