force-app/main/default/objects/Case/fields/CommentairesInternes__c.field-meta.xml
<CustomField>
    <fullName>CommentairesInternes__c</fullName>
    <label>Commentaires internes (200 caracts max)</label>
    <length>33000</length>
    <type>LongTextArea</type>
</CustomField>