force-app/main/default/objects/Case/fields/CommentairesSalle__c.field-meta.xml
<CustomField>
    <fullName>CommentairesSalle__c</fullName>
    <label>Commentaires de la salle</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>