force-app/main/default/objects/Case/fields/Communication_sortante__c.field-meta.xml
<CustomField>
    <fullName>Communication_sortante__c</fullName>
    <label>Communication sortante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Courrier</fullName>
            </value>
            <value>
                <fullName>Téléphone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>