force-app/main/default/objects/Case/fields/completude__c.field-meta.xml
<CustomField>
    <fullName>completude__c</fullName>
    <formula>Account.Completude__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complétude</label>
    <type>Text</type>
</CustomField>