force-app/main/default/objects/Case/fields/couponAbotiers__c.field-meta.xml
<CustomField>
    <fullName>couponAbotiers__c</fullName>
    <label>coupon Abo tiers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>