force-app/main/default/objects/Case/fields/CouponWelcomeback__c.field-meta.xml
<CustomField>
    <fullName>CouponWelcomeback__c</fullName>
    <label>Coupon Welcome back</label>
    <length>255</length>
    <type>Text</type>
</CustomField>