force-app/main/default/objects/Case/fields/Courriel__c.field-meta.xml
<CustomField>
    <fullName>Courriel__c</fullName>
    <description>Champ pour la création d&#39;un ticket par la salle</description>
    <label>Courriel</label>
    <type>Email</type>
</CustomField>