force-app/main/default/objects/Case/fields/CreditMemoId__c.field-meta.xml
<CustomField>
    <fullName>CreditMemoId__c</fullName>
    <description>Zuora Credit Memo Id</description>
    <label>CreditMemoId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>