force-app/main/default/objects/Case/fields/Crit_re_14_jours_post_souscription__c.field-meta.xml
<CustomField>
    <fullName>Crit_re_14_jours_post_souscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critère 14 jours post souscription</label>
    <type>Checkbox</type>
</CustomField>