force-app/main/default/objects/Case/fields/Crit_re_de_souscription_en_ligne__c.field-meta.xml
<CustomField>
    <fullName>Crit_re_de_souscription_en_ligne__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critère de souscription en ligne</label>
    <type>Checkbox</type>
</CustomField>