force-app/main/default/objects/Case/fields/Crit_re_non_utilisation_de_la_carte__c.field-meta.xml
<CustomField>
    <fullName>Crit_re_non_utilisation_de_la_carte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critère de non utilisation de la carte</label>
    <type>Checkbox</type>
</CustomField>