force-app/main/default/objects/Case/fields/Date_de_creation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_creation__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Date de création</label>
    <type>DateTime</type>
</CustomField>