force-app/main/default/objects/Case/fields/Date_de_D_sabonnement__c.field-meta.xml
<CustomField>
    <fullName>Date_de_D_sabonnement__c</fullName>
    <label>Date de désabonnement</label>
    <type>Date</type>
</CustomField>