force-app/main/default/objects/Case/fields/Date_de_l_incident__c.field-meta.xml
<CustomField>
    <fullName>Date_de_l_incident__c</fullName>
    <label>Date de l’incident</label>
    <type>DateTime</type>
</CustomField>