force-app/main/default/objects/Case/fields/Date_de_R_siliation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_R_siliation__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date de résiliation</label>
    <type>DateTime</type>
</CustomField>