force-app/main/default/objects/Case/fields/Date_fin_engagement__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_engagement__c</fullName>
    <label>TECH_Date de fin d&#39;engagement</label>
    <type>Date</type>
</CustomField>