force-app/main/default/objects/Case/fields/Date_Utilisation_Coupon_AboTiers__c.field-meta.xml
<CustomField>
    <fullName>Date_Utilisation_Coupon_AboTiers__c</fullName>
    <description>Si le coupon AboTiers a été utilisé sur une souscription, alors on met la date de souscription dans ce champ</description>
    <label>Date Utilisation Coupon AboTiers</label>
    <type>DateTime</type>
</CustomField>