force-app/main/default/objects/Case/fields/Date_Utilisation_Coupon_Welcome_back__c.field-meta.xml
<CustomField>
    <fullName>Date_Utilisation_Coupon_Welcome_back__c</fullName>
    <description>Si le coupon Welcome Back a été utilisé sur une souscription, alors on met la date de souscription dans ce champ</description>
    <label>Date Utilisation Coupon Welcome Back</label>
    <type>DateTime</type>
</CustomField>