force-app/main/default/objects/Case/fields/DateDemande__c.field-meta.xml
<CustomField>
    <fullName>DateDemande__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date de la demande</label>
    <type>Date</type>
</CustomField>