force-app/main/default/objects/Case/fields/DateDemandeAnnulation__c.field-meta.xml
<CustomField>
    <fullName>DateDemandeAnnulation__c</fullName>
    <label>Date de demande d&#39;annulation</label>
    <type>Date</type>
</CustomField>