force-app/main/default/objects/Case/fields/DateDeRemboursement__c.field-meta.xml
<CustomField>
    <fullName>DateDeRemboursement__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date de remboursement</label>
    <type>Date</type>
</CustomField>