force-app/main/default/objects/Case/fields/DateFinContrat__c.field-meta.xml
<CustomField>
    <fullName>DateFinContrat__c</fullName>
    <label>TECH_Date de fin de contrat</label>
    <type>Date</type>
</CustomField>