force-app/main/default/objects/Case/fields/DateHeureTransaction__c.field-meta.xml
<CustomField>
    <fullName>DateHeureTransaction__c</fullName>
    <description>Champ demande de remboursement</description>
    <label>Date/Heure de la transaction</label>
    <type>DateTime</type>
</CustomField>