force-app/main/default/objects/Case/fields/DateIncident__c.field-meta.xml
<CustomField>
    <fullName>DateIncident__c</fullName>
    <description>Champ ticket créé par la salle</description>
    <label>Date de l&#39;incident</label>
    <type>DateTime</type>
</CustomField>