force-app/main/default/objects/Case/fields/DateNaissance__c.field-meta.xml
<CustomField>
    <fullName>DateNaissance__c</fullName>
    <formula>Contact.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de naissance</label>
    <type>Date</type>
</CustomField>