force-app/main/default/objects/Case/fields/DateReceptionCourrier__c.field-meta.xml
<CustomField>
    <fullName>DateReceptionCourrier__c</fullName>
    <label>Date réception courrier</label>
    <type>DateTime</type>
</CustomField>