force-app/main/default/objects/Case/fields/DateReservation__c.field-meta.xml
<CustomField>
    <fullName>DateReservation__c</fullName>
    <description>Champ demande remboursement</description>
    <label>Date de la réservation</label>
    <type>Date</type>
</CustomField>