force-app/main/default/objects/Case/fields/DateSeance__c.field-meta.xml
<CustomField>
    <fullName>DateSeance__c</fullName>
    <label>Date de la séance</label>
    <type>Date</type>
</CustomField>