force-app/main/default/objects/Case/fields/Delais_traitement__c.field-meta.xml
<CustomField>
    <fullName>Delais_traitement__c</fullName>
    <formula>TEXT( FLOOR( ClosedDate - CreatedDate ) ) &amp; &quot; Days &quot; &amp; TEXT( FLOOR(MOD(( ClosedDate - CreatedDate )*24,24)) ) &amp;&quot; Hours &quot; &amp; TEXT( ROUND(MOD(( ClosedDate - CreatedDate )*1440,60),0) ) &amp;&quot; Minutes &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délais traitement</label>
    <type>Text</type>
</CustomField>