force-app/main/default/objects/Case/fields/DelaisTraitementReceptioncourrier__c.field-meta.xml
<CustomField>
    <fullName>DelaisTraitementReceptioncourrier__c</fullName>
    <formula>TEXT( FLOOR( DateReceptionCourrier__c -  CreatedDate ) ) &amp; &quot; Days &quot; &amp; TEXT( FLOOR(MOD(( DateReceptionCourrier__c -  CreatedDate )*24,24)) ) &amp;&quot; Hours &quot; &amp; TEXT( ROUND(MOD(( DateReceptionCourrier__c -  CreatedDate )*1440,60),0) ) &amp;&quot; Minutes &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délais traitement / reception courrier</label>
    <type>Text</type>
</CustomField>