force-app/main/default/objects/Case/fields/DemandeRemboursement2__c.field-meta.xml
<CustomField>
    <fullName>DemandeRemboursement2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demande de remboursement 2</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Demandes d&#39;origine</relationshipLabel>
    <relationshipName>OrigineDemandes</relationshipName>
    <type>Lookup</type>
</CustomField>