force-app/main/default/objects/Case/fields/DemandeRemboursement__c.field-meta.xml
<CustomField>
    <fullName>DemandeRemboursement__c</fullName>
    <label>Demande de remboursement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VLO</fullName>
            </value>
            <value>
                <fullName>Réservations autres</fullName>
            </value>
            <value>
                <fullName>UGCIllimité</fullName>
                <label>UGC Illimité</label>
            </value>
            <value>
                <fullName>UGCUnlimited</fullName>
                <label>UGC Unlimited</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>