force-app/main/default/objects/Case/fields/Domaine__c.field-meta.xml
<CustomField>
    <fullName>Domaine__c</fullName>
    <label>Domaine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autres Produits</fullName>
            </value>
            <value>
                <fullName>Fidélité</fullName>
            </value>
            <value>
                <fullName>Prompto</fullName>
            </value>
            <value>
                <fullName>Salle</fullName>
            </value>
            <value>
                <fullName>UGC Illimité</fullName>
            </value>
            <value>
                <fullName>UGC Unlimited FR</fullName>
            </value>
            <value>
                <fullName>UGC Unlimited NL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>