force-app/main/default/objects/Case/fields/EtapeValidationRembousement__c.field-meta.xml
<CustomField>
    <fullName>EtapeValidationRembousement__c</fullName>
    <description>Champ permet de suivre l&#39;évolution du processus d&#39;approbation d&#39;un remboursement</description>
    <label>Etape validation du remboursement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validée DRC</fullName>
                <label>Validation DRC</label>
            </value>
            <value>
                <fullName>RefusDRC</fullName>
                <label>Refus DRC</label>
            </value>
            <value>
                <fullName>ValidationSuperviseur</fullName>
                <label>Validation superviseur</label>
            </value>
            <value>
                <fullName>Refus superviseur</fullName>
            </value>
            <value>
                <fullName>Validation DAF</fullName>
            </value>
            <value>
                <fullName>EnCoursValidation</fullName>
                <default>true</default>
                <label>En cours de validation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>