force-app/main/default/objects/Case/fields/Etat_remboursement__c.field-meta.xml
<CustomField>
    <fullName>Etat_remboursement__c</fullName>
    <label>Etat remboursement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en attente</fullName>
            </value>
            <value>
                <fullName>Rembourse</fullName>
                <label>Remboursé</label>
            </value>
            <value>
                <fullName>Créée</fullName>
                <default>true</default>
                <label>Créée</label>
            </value>
            <value>
                <fullName>Refusé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>