force-app/main/default/objects/Case/fields/Evenement__c.field-meta.xml
<CustomField>
    <fullName>Evenement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evènement</label>
    <referenceTo>Evenement__c</referenceTo>
    <relationshipLabel>Demandes clients</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>