force-app/main/default/objects/Case/fields/ExecDate__c.field-meta.xml
<CustomField>
    <fullName>ExecDate__c</fullName>
    <description>Last execution date</description>
    <label>Execution Date</label>
    <type>DateTime</type>
</CustomField>