force-app/main/default/objects/Case/fields/ExecMessage__c.field-meta.xml
<CustomField>
    <fullName>ExecMessage__c</fullName>
    <description>save issue on case process execution: desabo..etc.</description>
    <label>Execution Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>