force-app/main/default/objects/Case/fields/ExecStatus__c.field-meta.xml
<CustomField>
    <fullName>ExecStatus__c</fullName>
    <description>Last execution status</description>
    <label>Execution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Erreur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>