force-app/main/default/objects/Case/fields/ExecSuccessDate__c.field-meta.xml
<CustomField>
    <fullName>ExecSuccessDate__c</fullName>
    <label>Execution Success Date</label>
    <type>DateTime</type>
</CustomField>