force-app/main/default/objects/Case/fields/Famille__c.field-meta.xml
<CustomField>
    <fullName>Famille__c</fullName>
    <label>Famille</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0- Souscription</fullName>
            </value>
            <value>
                <fullName>1- Vie de l&#39;abonnement</fullName>
            </value>
            <value>
                <fullName>2- Club UGC / fidelite</fullName>
            </value>
            <value>
                <fullName>3- Autres Produits</fullName>
            </value>
            <value>
                <fullName>4- Reservation</fullName>
                <label>4- Réservation</label>
            </value>
            <value>
                <fullName>5- Compte client</fullName>
            </value>
            <value>
                <fullName>6- Prospection</fullName>
            </value>
            <value>
                <fullName>7- Finance</fullName>
            </value>
            <value>
                <fullName>8- Cinema</fullName>
                <label>8- Cinéma</label>
            </value>
            <value>
                <fullName>9- Divers</fullName>
            </value>
            <value>
                <fullName>0- Commentaires</fullName>
                <isActive>false</isActive>
                <label>0- Commentaires</label>
            </value>
            <value>
                <fullName>1- Demandes d info UI</fullName>
                <isActive>false</isActive>
                <label>1- Demandes d info UI</label>
            </value>
            <value>
                <fullName>1- Demandes d&#39;info UI</fullName>
                <isActive>false</isActive>
                <label>1- Demandes d&#39;info UI</label>
            </value>
            <value>
                <fullName>2- Demande d infos generales</fullName>
                <isActive>false</isActive>
                <label>2- Demande d infos generales</label>
            </value>
            <value>
                <fullName>2- Demande d&#39;infos générales</fullName>
                <isActive>false</isActive>
                <label>2- Demande d&#39;infos générales</label>
            </value>
            <value>
                <fullName>3- Autres demandes d&#39;informations</fullName>
                <isActive>false</isActive>
                <label>3- Autres demandes d&#39;informations</label>
            </value>
            <value>
                <fullName>4- Abonnement Carte UGC</fullName>
                <isActive>false</isActive>
                <label>4- Abonnement Carte UGC</label>
            </value>
            <value>
                <fullName>5- Abonnement en attente</fullName>
                <isActive>false</isActive>
                <label>5- Abonnement en attente</label>
            </value>
            <value>
                <fullName>6- GestionCompteUI</fullName>
                <isActive>false</isActive>
                <label>6- GestionCompteUI</label>
            </value>
            <value>
                <fullName>7- Réclamations UI</fullName>
                <isActive>false</isActive>
                <label>7- Réclamations UI</label>
            </value>
            <value>
                <fullName>8- Autres types de reclamations</fullName>
                <isActive>false</isActive>
                <label>8- Autres types de reclamations</label>
            </value>
            <value>
                <fullName>8- Autres types de réclamations</fullName>
                <isActive>false</isActive>
                <label>8- Autres types de réclamations</label>
            </value>
            <value>
                <fullName>9- Supports Digitaux</fullName>
                <isActive>false</isActive>
                <label>9- Supports Digitaux</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>