force-app/main/default/objects/Case/fields/Famille_motif_sous_motif__c.field-meta.xml
<CustomField>
    <fullName>Famille_motif_sous_motif__c</fullName>
    <formula>TEXT(Famille__c) &amp;&quot; / &quot;&amp; TEXT(Motif__c) &amp;&quot; / &quot;&amp; TEXT(SousMotif__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Famille / motif / sous motif</label>
    <type>Text</type>
</CustomField>