force-app/main/default/objects/Case/fields/GoodiesEnvoyes__c.field-meta.xml
<CustomField>
    <fullName>GoodiesEnvoyes__c</fullName>
    <label>Goodies envoyés</label>
    <type>TextArea</type>
</CustomField>