force-app/main/default/objects/Case/fields/IconeTicketFerme__c.field-meta.xml
<CustomField>
    <fullName>IconeTicketFerme__c</fullName>
    <formula>IF (ISPICKVAL(Status, &quot;Fermée&quot;), IMAGE(&quot;/resource/1509356389000/ticketferme&quot;, &quot;.png&quot;,50,50), 
IF (ISPICKVAL(Status, &quot;En cours&quot;), IMAGE(&quot;/resource/1509356762000/ticketouvert&quot;, &quot;.png&quot;,50,50), &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IconeTicketFermé</label>
    <type>Text</type>
</CustomField>